# fullstack-python-project

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml  sonar-project.properties
backend/app/: main.py  mongo.py  schema.py
backend/scripts/: manage.py
backend/tests/: test_main.py  test_mongo.py  test_schema.py
